trying to fix background issues on mobile

--- a/src/style.css
+++ b/src/style.css
@@ -5,9 +5,11 @@
     box-sizing: border-box;
 }
 
+
 body{
     background: aliceblue;
     color: #274e13; 
+    width: 100vw;
 }
 
 header{
